--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Budget</string>
+    <string name="app_name">MiPresupuesto</string>
+    <string name="menu_home">Inicio</string>
+    <string name="menu_account">Cuentas</string>
+    <string name="menu_category">Categorias</string>
+    <string name="menu_expenses">Gastos</string>
 </resources>
