--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
     <string name="add">Agregar</string>
     <string name="name">Nombre</string>
     <string name="amount">Ingreso</string>
+    <string name="budget">Cantidad</string>
     <string name="save">Guardar</string>
     <string name="account_type">Tipo de cuenta</string>
     <string name="income">Ingresos</string>
+    <string name="to_budget">Disponible para alocar</string>
     <string-array name="account_types_array">
         <item>Cheque</item>
         <item>Ahorro</item>
