--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="account_type">Tipo de cuenta</string>
     <string name="income">Ingresos</string>
     <string name="to_budget">Disponible para alocar</string>
+    <string name="load_accounts">Cargar cuentas</string>
     <string-array name="account_types_array">
         <item>Cheque</item>
         <item>Ahorro</item>
