--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="save">Guardar</string>
     <string name="account_type">Tipo de cuenta</string>
     <string name="income">Ingresos</string>
+    <string name="expense">Gastos</string>
     <string name="to_budget">Disponible para alocar</string>
     <string name="load_accounts">Cargar cuentas</string>
     <string-array name="account_types_array">
